# G1-MidTerm

./: CMakeLists.txt  FlightChess.h  README.md  main.c
cfg/: cfg.txt  log.txt
code/: CMakeLists.txt  FlightChess.h  SDL_main.c  cfg.txt  dice.c  game.c  variable_definition.c  variables.c
src/: CMakeLists.txt  FlightChess.h  SDL_main.c  chess.c  dice.c  draw.c  game.c  main.c  variables.c
